welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: identifier expected but integer literal found.
  G[0] = 0
    ^golomb:6: error: ']' expected but ';' found.
  G[1] = 1
^golomb:6: error: identifier expected but integer literal found.
  G[1] = 1
    ^golomb:7: error: ']' expected but ';' found.
  G[2] = 2
^golomb:7: error: identifier expected but integer literal found.
  G[2] = 2
    ^golomb:8: error: ']' expected but ';' found.
  G[num] = 0
^golomb:8: error: ';' expected but '=' found.
  G[num] = 0
         ^